--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@auth0/auth0-react": "^1.10.1",
+    "babel-plugin-styled-components": "^2.0.7",
     "gatsby": "^4.11.1",
     "gatsby-plugin-gatsby-cloud": "^4.11.1",
     "gatsby-plugin-image": "^2.11.1",
@@ -13,6 +14,7 @@
     "gatsby-plugin-offline": "^5.11.1",
     "gatsby-plugin-react-helmet": "^5.11.0",
     "gatsby-plugin-sharp": "^4.11.1",
+    "gatsby-plugin-styled-components": "^5.14.0",
     "gatsby-source-filesystem": "^4.11.1",
     "gatsby-source-sanity": "^7.4.2",
     "gatsby-transformer-sharp": "^4.11.0",
