--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@auth0/auth0-react": "^1.10.1",
+    "@portabletext/react": "^1.0.6",
     "babel-plugin-styled-components": "^2.0.7",
     "gatsby": "^4.11.1",
     "gatsby-plugin-gatsby-cloud": "^4.11.1",
