--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@portabletext/react": "^1.0.6",
     "babel-plugin-styled-components": "^2.0.7",
     "gatsby": "^4.11.1",
+    "gatsby-plugin-fathom": "^2.1.1",
     "gatsby-plugin-gatsby-cloud": "^4.11.1",
     "gatsby-plugin-image": "^2.11.1",
     "gatsby-plugin-manifest": "^4.11.1",
