--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "gatsby-plugin-fathom": "^2.1.1",
     "gatsby-plugin-gatsby-cloud": "^4.11.1",
     "gatsby-plugin-image": "^2.11.1",
-    "gatsby-plugin-iubenda-cookie-footer": "^1.4.0",
     "gatsby-plugin-manifest": "^4.11.1",
     "gatsby-plugin-offline": "^5.11.1",
     "gatsby-plugin-react-helmet": "^5.11.0",
@@ -27,6 +26,7 @@
     "react-feather": "^2.0.9",
     "react-helmet": "^6.1.0",
     "react-tsparticles": "^1.42.4",
+    "source-map": "^0.7.4",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
